--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.12.2-1.2.0"
+version = "awoo-0.0.1-1.12.2"
 group= "com.gmail.nuclearcat1337.snitch_master" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "SnitchMaster"
 
